fixed the dark mode styling and made it small-devise responsive

--- a/css/styles.css
+++ b/css/styles.css
@@ -144,6 +144,10 @@ a:hover {
 .project-desciption {
   padding: 20px 60px;
 }
+.sub-naming {
+ position: relative;
+ left: 60px;
+}
 
 nav ul {
   margin: 0px;
@@ -167,7 +171,7 @@ nav a:hover {
 .dark-theme {
   border: 1px solid;
   background-color: var(--secondary-color);
-  box-shadow: -6px -6px 13px #fff, 6px 6px 13px rgba(0, 0, 0, 0.1);
+  box-shadow: -px -6px 13px #fff, 6px 6px 13px rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   height: 50px;
   width: 50px;
@@ -249,6 +253,10 @@ footer .resume-section a:hover {
   .container .content-page .btn-contact {
     margin-bottom: 20px;
   }
+  .sub-naming {
+ position: relative;
+ left: 5px;
+}
 }
 .dark {
   background: black;
@@ -256,10 +264,12 @@ footer .resume-section a:hover {
 .dark h1,
 .dark h2,
 .dark p,
+.dark p a,
+.dark h3 a:hover,
 .dark .email-link a,
 .dark nav a,
 .dark i:hover,
-.dark .btn-live:hover {
+.dark .btn-live:hover{
   color: white;
 }
 .dark .footer h4,
@@ -271,10 +281,10 @@ footer .resume-section a:hover {
   background-color: rgb(50, 46, 46);
 }
 .dark .btn-contact {
-  background-color: var(--light-color);
+  background-color: var(--secondary-color);
 }
 .dark a:hover,
-.dark h3 {
+.dark h3 a{
   color: var(--secondary-color);
 }
 .dark i {
